syntax = "proto3";

package test.v1;

import "google/protobuf/descriptor.proto";

// ============================================================================
// Custom Options for Metadata
// ============================================================================

extend google.protobuf.MethodOptions {
  // Response metadata headers to include
  repeated string response_metadata = 50001;
  // Response trailers to include
  repeated string response_trailers = 50002;
  // Required request metadata headers
  repeated string required_metadata = 50003;
}

// ============================================================================
// Common Types
// ============================================================================

// Success response with value
message SuccessPayload {
  string value = 1;
}

// Error response with code and message
message ErrorPayload {
  int32 code = 1;
  string message = 2;
}

// ============================================================================
// 1. Simple Request/Response (basic types)
// ============================================================================

message GetUserRequest {
  int32 user_id = 1;
}

message GetUserResponse {
  int32 user_id = 1;
  string name = 2;
  string email = 3;
}

// ============================================================================
// 2. Nested Objects (complex structures)
// ============================================================================

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3;
}

message ShippingAddress {
  string street = 1;
  string city = 2;
  string zip = 3;
  string country = 4;
}

message CreateOrderRequest {
  string customer_id = 1;
  repeated OrderItem items = 2;
  ShippingAddress shipping_address = 3;
}

message CreateOrderResponse {
  string order_id = 1;
  string status = 2;
  double total = 3;
  ShippingAddress shipping_address = 4;
}

// ============================================================================
// 3. OneOf (union types)
// ============================================================================

message GenericRequest {
  string key = 1;
}

message GenericResponse {
  oneof result {
    SuccessPayload success = 1;
    ErrorPayload error = 2;
  }
}

// ============================================================================
// 4. Repeated Fields (arrays)
// ============================================================================

message ListUsersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message UserInfo {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message ListUsersResponse {
  repeated UserInfo users = 1;
  int32 total = 2;
}

// ============================================================================
// 5. Optional Fields (proto3 optional)
// ============================================================================

message UpdateUserRequest {
  int32 user_id = 1;
  optional string name = 2;
  optional string email = 3;
  optional bool active = 4;
}

message UpdateUserResponse {
  int32 user_id = 1;
  string name = 2;
  string email = 3;
  bool active = 4;
  string updated_at = 5;
}

// ============================================================================
// 6. Map Fields
// ============================================================================

message GetConfigRequest {
  string namespace = 1;
}

message GetConfigResponse {
  string namespace = 1;
  map<string, string> config = 2;
}

// ============================================================================
// 7. Enum Types
// ============================================================================

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_CONFIRMED = 2;
  ORDER_STATUS_SHIPPED = 3;
  ORDER_STATUS_DELIVERED = 4;
  ORDER_STATUS_CANCELLED = 5;
}

message GetOrderStatusRequest {
  string order_id = 1;
}

message GetOrderStatusResponse {
  string order_id = 1;
  OrderStatus status = 2;
  string status_message = 3;
}

// ============================================================================
// 8. Boolean Response (simple delete/action)
// ============================================================================

message DeleteUserRequest {
  int32 user_id = 1;
}

message DeleteUserResponse {
  bool deleted = 1;
}

// ============================================================================
// Streaming Messages (for bidirectional streaming tests)
// ============================================================================

message StreamRequest {
  string request_id = 1;
  oneof payload {
    PingRequest ping = 2;
    SubscribeRequest subscribe = 3;
    DataRequest data = 4;
  }
}

message PingRequest {
  int64 timestamp = 1;
}

message SubscribeRequest {
  string channel = 1;
  repeated string topics = 2;
}

message DataRequest {
  string key = 1;
  bytes value = 2;
}

message StreamResponse {
  string request_id = 1;
  oneof payload {
    PongResponse pong = 2;
    SubscribeResponse subscribe = 3;
    DataResponse data = 4;
    ErrorPayload error = 5;
  }
}

message PongResponse {
  int64 timestamp = 1;
}

message SubscribeResponse {
  string channel = 1;
  bool success = 2;
}

message DataResponse {
  string key = 1;
  bytes value = 2;
  string status = 3;
}

// ============================================================================
// Test Service - Unary and Streaming Methods
// ============================================================================

service TestService {
  // 1. Simple request/response with metadata options
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (response_metadata) = "x-request-id";
    option (response_metadata) = "x-api-version";
    option (response_trailers) = "x-processing-time-ms";
  }
  
  // 2. Nested objects
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  
  // 3. OneOf (union types) - success or error
  rpc GetData(GenericRequest) returns (GenericResponse);
  
  // GetSecretData requires authorization metadata
  rpc GetSecretData(GenericRequest) returns (GenericResponse) {
    option (required_metadata) = "authorization";
    option (response_metadata) = "x-auth-user";
  }
  
  // 4. Repeated fields (arrays)
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  
  // 5. Optional fields
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  
  // 6. Map fields
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  
  // 7. Enum types
  rpc GetOrderStatus(GetOrderStatusRequest) returns (GetOrderStatusResponse);
  
  // 8. Boolean response
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  
  // Bidirectional streaming
  rpc Stream(stream StreamRequest) returns (stream StreamResponse);
}

// Streaming test service
service StreamTestService {
  rpc DeliveryMessage(stream StreamRequest) returns (stream StreamResponse);
}
